# internal/api/docs/swagger.yaml
@@ -5344,6 +5344,12 @@ definitions:
         type: string
       ignored:
         type: boolean
+      ingressAdapter:
+        type: string
+      ingressChannel:
+        type: string
+      ingressDeliveryId:
+        type: string
       planId:
         type: string
       providerRunId:
